# docstra

./: .gitignore  GENERATOR.md  README.md  REFACTORING_PLAN.md  mkdocs.yml  pyproject.toml
core/: .gitignore  README.md  docstra.json  pyproject.toml
core/.docstra/: config.json  sessions.db
core/.docstra/chromadb/: chroma.sqlite3
core/docstra/: __init__.py  api.py  chunker.py  cli.py  config.py  core.py  database.py  file_watcher.py  loader.py  retriever.py  service.py  session.py
core/docstra/cli/: base.py
core/docstra/cli/commands/: __init__.py  ask.py  chat.py  docs.py  ingest.py  init.py  query.py  serve.py
core/docstra/cli/utils/: __init__.py  config.py  keys.py  paths.py  ui.py
core/docstra/service/: context.py  indexer.py  llm.py  service.py
docs/assets/css/: custom.css  custom.md
docs/assets/js/: custom.js  custom.md  extra-search-data.json  extra-search-data.md
docs/core/config/: __init__.md  settings.md  wizard.md
docs/core/document_processing/: __init__.md  chunking.md  document.md  extractor.md  parser.md
docs/core/documentation/: __init__.md  generator.md  setup.md  wizard.md
docs/core/indexing/: __init__.md  code_index.md  repo_map.md
docs/core/ingestion/: __init__.md  embeddings.md  storage.md
docs/core/llm/: __init__.md  anthropic.md  local.md  ollama.md  openai.md  prompt.md
docs/core/retrieval/: __init__.md  chroma.md  hybrid.md
docs/core/utils/: __init__.md  file_collector.md
docs/development/docstra/: GENERATOR.md  README.md  pyproject.md
docs/docstra/core/: __init__.md  app.md  cli.md
docs/docstra/docs/: mkdocs.md
docs/docstra/docstra/: __init__.md
docs/extensions/intellij/: DocstraToolWindowFactory.md  plugin.md
docs/extensions/vscode/: CHANGELOG.md  README.md  esbuild.md  extension.md  package-lock.md  package.md  tsconfig.md  vsc-extension-quickstart.md
docs/vscode/chat/: chatManager.md  chatView.md
docs/vscode/media/: chat.md  reset.md  styles.md  vscode.md
docs/vscode/server/: serverManager.md
docs/vscode/suite/: extension.test.md
docs/vscode/utils/: installUtils.md  workspaceUtils.md
docstra/: __init__.py  app.py  chat_db.py  cli.py  config.py  generate.py  ingestor.py  llm_engine.py  logger.py  main.py  server.py  vectorstore.py
docstra/core/: __init__.py  app.py  cli.py
docstra/core/config/: __init__.py  settings.py  wizard.py
docstra/core/document_processing/: __init__.py  chunking.py  document.py  extractor.py  parser.py
docstra/core/documentation/: __init__.py  generator.py  setup.py  wizard.py
docstra/core/indexing/: __init__.py  code_index.py  repo_map.py
docstra/core/ingestion/: __init__.py  embeddings.py  storage.py
docstra/core/llm/: __init__.py  anthropic.py  base.py  local.py  ollama.py  openai.py  prompt.py
docstra/core/retrieval/: __init__.py  chroma.py  hybrid.py
docstra/core/services/: chat_service.py  config_service.py  documentation_service.py  ingestion_service.py  initialization_service.py  query_service.py
docstra/core/tracking/: llm_tracker.py
docstra/core/utils/: __init__.py  colors.py  file_collector.py  language_detector.py
extensions/intellij/: DocstraToolWindowFactory.java  plugin.xml
extensions/vscode/: package-lock.json  package.json
extensions/vscode/src/: extension.ts  webview.ts
extensions/vscode/src/chat/: chatManager.ts  chatView.ts
extensions/vscode/src/server/: serverManager.ts
extensions/vscode/src/utils/: installUtils.ts  workspaceUtils.ts
