[tool.poetry]
name = "docstra"
version = "0.1.0"
description = "An LLM-powered CLI tool and Python package for generating repository-level documentation from code."
authors = ["Jørgen Andresen Osberg <jorgen.osberg@gmail.com>, Jonathan Selstad Hofstein <>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.3"
openai = "^1.51.2"
langchain-openai = "^0.2.2"
chromadb = "^0.5.12"
langchain-chroma = "^0.1.4"
langchain-community = "^0.3.2"
uvicorn = "^0.32.0"
fastapi = "^0.115.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
